# Mark

./: README.md  index.html  package-lock.json  package.json
src/: main.ts  nav.ts  shim.ts  styles.css  types.ts
src-tauri/: Cargo.toml  okay.md  tauri.conf.json
src-tauri/src/: cmds.rs  emit.rs  fs_search.rs  main.rs  markdown.md  payloads.rs  watcher.rs
src-tauri/src/fs/: mod.rs  watcher.rs
src/components/: current-file.ts  index.ts  pager.ts
src/components/file-picker/: index.ts  recent-files.ts  search-results.ts  styles.module.css
src/components/notifications/: index.ts  styles.module.css
src/helpers/: bridge.ts  observable.ts
src/lib/: filepicker.ts  files-manager.ts  keyboard.ts  links.ts  listen.ts  lock-at-bottom.ts  observable.ts  search.ts  shim.ts  switch-to-changing.ts  utils.ts
src/styles/: file-pager.css  filepicker.css  footer.css  header.css  markdown.css  notifications.css  shortcut-guide.css
